fix spanish to english

--- a/learning-python.ipynb
+++ b/learning-python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -14,9 +14,9 @@
     }
    ],
    "source": [
-    "nombre = 'Carlos'\n",
-    "edad = 25\n",
-    "print(\"Hello world from Python, I'm \" + nombre + \", I'm \" + str(edad) + ' years old')"
+    "name = 'Carlos'\n",
+    "age = 25\n",
+    "print(\"Hello world from Python, I'm \" + name + \", I'm \" + str(age) + ' years old')"
    ]
   }
  ],
