--- a/learning-python.ipynb
+++ b/learning-python.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hello World"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +24,80 @@
     "name = 'Carlos'\n",
     "age = 25\n",
     "print(\"Hello world from Python, I'm \" + name + \", I'm \" + str(age) + ' years old')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Carlos\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input(\"What's your name?\")\n",
+    "print(\"Hello \" + name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conditional"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Young\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 17\n",
+    "if(age>=18) & (age<=70):\n",
+    "    print(\"Adult\")\n",
+    "elif(age>70):\n",
+    "    print(\"Older\")\n",
+    "else:\n",
+    "    print(\"Young\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adult\n",
+      "You can pass\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"How old are you?\")) > 18\n",
+    "height = int(input(\"What's your height? (cm)\")) > 150\n",
+    "if age:\n",
+    "    print(\"Adult\")\n",
+    "\n",
+    "if age | height:\n",
+    "    print(\"You can pass\")\n",
+    "else:\n",
+    "    print(\"You can't pass\")"
    ]
   }
  ],
