--- a/learning-python.ipynb
+++ b/learning-python.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Carlos\n"
+      "Hello \n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -98,6 +98,43 @@
     "    print(\"You can pass\")\n",
     "else:\n",
     "    print(\"You can't pass\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Arithmetic operators"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pair\n",
+      "20\n",
+      "0\n",
+      "1.0\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "number = int(input(\"Enter a number\"))\n",
+    "if number % 2 == 0:\n",
+    "    print(\"Pair\")\n",
+    "else:\n",
+    "    print(\"Odd\")\n",
+    "\n",
+    "print(number + number)\n",
+    "print(number - number)\n",
+    "print(number / number)\n",
+    "print(number * number)"
    ]
   }
  ],
