--- a/basics-python.ipynb
+++ b/basics-python.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +135,55 @@
     "print(number - number)\n",
     "print(number / number)\n",
     "print(number * number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28.570484872506274\n",
+      "Excess weight\n"
+     ]
+    }
+   ],
+   "source": [
+    "# IMC Calculator\n",
+    "# IMC = weight /(height * height)\n",
+    "# < 19 = thin\n",
+    "# > 20 & < 25 = normal\n",
+    "# > 26 & < 30 = excess weight\n",
+    "# > 30 = Obesity\n",
+    "\n",
+    "def calculateImc():\n",
+    "    weight = float(input(\"Enter your weight in kg\"))\n",
+    "    height = int(input(\"Enter your height in cm\")) / 100\n",
+    "\n",
+    "    imc = weight / (height * height)\n",
+    "    print(imc)\n",
+    "\n",
+    "    if imc < 20:\n",
+    "        print(\"Thin\")\n",
+    "    elif imc >= 20 and imc < 26:\n",
+    "        print(\"normal\")\n",
+    "    elif imc >= 26 and imc < 31:\n",
+    "        print(\"Excess weight\")\n",
+    "    elif imc > 30:\n",
+    "        print(\"Obesity\")\n",
+    "\n",
+    "\n",
+    "calculateImc()"
    ]
   }
  ],
