--- a/basics-python.ipynb
+++ b/basics-python.ipynb
@@ -146,14 +146,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "28.570484872506274\n",
+      "IMC: 28.405337561104506\n",
       "Excess weight\n"
      ]
     }
@@ -166,12 +166,15 @@
     "# > 26 & < 30 = excess weight\n",
     "# > 30 = Obesity\n",
     "\n",
-    "def calculateImc():\n",
+    "def calculateImc(weight, height):\n",
+    "    imc = weight / (height * height)\n",
+    "    return imc\n",
+    "\n",
+    "def showResultImc():\n",
     "    weight = float(input(\"Enter your weight in kg\"))\n",
     "    height = int(input(\"Enter your height in cm\")) / 100\n",
-    "\n",
-    "    imc = weight / (height * height)\n",
-    "    print(imc)\n",
+    "    imc = calculateImc(weight, height)\n",
+    "    print(\"IMC: \" + str(imc))\n",
     "\n",
     "    if imc < 20:\n",
     "        print(\"Thin\")\n",
@@ -183,7 +186,8 @@
     "        print(\"Obesity\")\n",
     "\n",
     "\n",
-    "calculateImc()"
+    "\n",
+    "showResultImc()"
    ]
   }
  ],
