--- a/bucles-python.ipynb
+++ b/bucles-python.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -43,14 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Valeria 🫀\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
       "salir\n"
      ]
     }
@@ -70,6 +73,90 @@
     "    text = text.replace('<3', '🫀')\n",
     "\n",
     "    print(text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "banana\n",
+      "apple\n",
+      "pineapple\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['banana', 'apple', 'pineapple']\n",
+    "\n",
+    "for fruit in fruits:\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"hello\"\n",
+    "\n",
+    "for letter in text:\n",
+    "    print(letter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(10):\n",
+    "    if(number > 4):\n",
+    "        print(number)\n",
+    "\n",
+    "for number in range(5,10):\n",
+    "    print(number)"
    ]
   }
  ],
