--- a/arrays-python.ipynb
+++ b/arrays-python.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -24,6 +24,57 @@
     "array = ['banana', 'apple', 'pineapple']\n",
     "\n",
     "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Objet Oriented Programming\n",
+      "5221475: five two two one four seven five \n"
+     ]
+    }
+   ],
+   "source": [
+    "dictionary = {\n",
+    "    'OOP': 'Objet Oriented Programming',\n",
+    "    'MVC': 'Model View Controller'\n",
+    "}\n",
+    "\n",
+    "print(dictionary['OOP'])\n",
+    "\n",
+    "numbers = {\n",
+    "    '0': 'zero',\n",
+    "    '1': 'one',\n",
+    "    '2': 'two',\n",
+    "    '3': 'three',\n",
+    "    '4': 'four',\n",
+    "    '5': 'five',\n",
+    "    '6': 'six',\n",
+    "    '7': 'seven',\n",
+    "    '8': 'eight',\n",
+    "    '9': 'nine'\n",
+    "}\n",
+    "\n",
+    "text = input('Enter a number')\n",
+    "\n",
+    "finalText = ''\n",
+    "for number in text:\n",
+    "    finalText += numbers[number] + ' '\n",
+    "\n",
+    "print(text + ': ' + finalText)"
    ]
   }
  ],
