Encrypter-Decrypter File

--- a/files-python.ipynb
+++ b/files-python.ipynb
@@ -16,24 +16,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Save Test in fileSave Test in fileSave Test in fileSave Test in file\n",
-      "Save Test in file\n",
-      "Save Test in file\n",
-      "Save Test in file\n",
-      "Save Test in file\n",
       "Save Test in file\n"
      ]
     }
    ],
    "source": [
-    "text = \"\\nSave Test in file\"\n",
+    "text = \"Save Test in file\"\n",
     "f = open('text.txt', 'a')\n",
     "f.write(text)\n",
     "f.close\n",
@@ -110,6 +105,51 @@
     "print('-------------------------------------------')\n",
     "print('Decrypt')\n",
     "decrypt('pxrxuxexbxax xdxex xixnxixcxixox')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def encrypt(text):\n",
+    "    finalText = ''\n",
+    "    for letter in text:\n",
+    "        finalText += letter + 'x'\n",
+    "    return finalText\n",
+    "\n",
+    "def decrypt(text):\n",
+    "    finalText = ''\n",
+    "    counter = 0\n",
+    "    for letter in text:\n",
+    "        if counter % 2 == 0:\n",
+    "            finalText += letter\n",
+    "        counter+=1\n",
+    "    return finalText\n",
+    "\n",
+    "def encryptFile():\n",
+    "    file = open('text.txt', 'r')\n",
+    "    text = file.read()\n",
+    "    file.close\n",
+    "    encryptedText = encrypt(text)\n",
+    "\n",
+    "    file = open('text.txt', 'w')\n",
+    "    file.write(encryptedText)\n",
+    "    file.close\n",
+    "\n",
+    "def decryptFile():\n",
+    "    file = open('text.txt', 'r')\n",
+    "    text = file.read()\n",
+    "    file.close\n",
+    "    decryptText = decrypt(text)\n",
+    "\n",
+    "    file = open('text.txt', 'w')\n",
+    "    file.write(decryptText)\n",
+    "    file.close\n",
+    "\n",
+    "#encryptFile()\n",
+    "decryptFile()"
    ]
   }
  ],
