Encrypt-Decrypt Ascii code

--- a/files-python.ipynb
+++ b/files-python.ipynb
@@ -109,23 +109,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encrypt(text):\n",
     "    finalText = ''\n",
     "    for letter in text:\n",
-    "        finalText += letter + 'x'\n",
+    "        letterCode = ord(letter)\n",
+    "        letterCode += 1\n",
+    "        finalText += chr(letterCode)\n",
     "    return finalText\n",
     "\n",
     "def decrypt(text):\n",
     "    finalText = ''\n",
-    "    counter = 0\n",
     "    for letter in text:\n",
-    "        if counter % 2 == 0:\n",
-    "            finalText += letter\n",
-    "        counter+=1\n",
+    "        letterCode = ord(letter)\n",
+    "        letterCode -= 1\n",
+    "        finalText += chr(letterCode)\n",
     "    return finalText\n",
     "\n",
     "def encryptFile():\n",
