--- a/arrays-python.ipynb
+++ b/arrays-python.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
      "output_type": "stream",
      "text": [
       "Objet Oriented Programming\n",
-      "5221475: five two two one four seven five \n"
+      "156: one five six \n"
      ]
     }
    ],
@@ -75,6 +75,66 @@
     "    finalText += numbers[number] + ' '\n",
     "\n",
     "print(text + ': ' + finalText)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multidimensional Array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[34.5, 45.6, '2022/02/02 17:20:24']\n",
+      "[34.5, 46.3, '2022/02/02 17:20:34']\n",
+      "[35.5, 47.3, '2022/02/02 17:20:44']\n",
+      "[34.5, 48.3, '2022/02/02 17:20:54']\n",
+      "[33.5, 49.3, '2022/02/02 17:20:04']\n",
+      "34.5\n",
+      "45.6\n",
+      "2022/02/02 17:20:24\n",
+      "34.5\n",
+      "46.3\n",
+      "2022/02/02 17:20:34\n",
+      "35.5\n",
+      "47.3\n",
+      "2022/02/02 17:20:44\n",
+      "34.5\n",
+      "48.3\n",
+      "2022/02/02 17:20:54\n",
+      "33.5\n",
+      "49.3\n",
+      "2022/02/02 17:20:04\n"
+     ]
+    }
+   ],
+   "source": [
+    "lat = 34.5\n",
+    "lon = 45.6\n",
+    "position = [lat, lon]\n",
+    "\n",
+    "historial = [\n",
+    "    [34.5, 45.6, \"2022/02/02 17:20:24\"],\n",
+    "    [34.5, 46.3, \"2022/02/02 17:20:34\"],\n",
+    "    [35.5, 47.3, \"2022/02/02 17:20:44\"],\n",
+    "    [34.5, 48.3, \"2022/02/02 17:20:54\"],\n",
+    "    [33.5, 49.3, \"2022/02/02 17:20:04\"]\n",
+    "]\n",
+    "\n",
+    "for coord in historial:\n",
+    "    print(coord)\n",
+    "\n",
+    "for coord in historial:\n",
+    "    for c in coord:\n",
+    "        print(c)"
    ]
   }
  ],
